umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_canon19.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 21
sum_formula: C20
graph6: "S??A_?Gg?`???OOG?A??G_?C_?OIG?C?C"
